# api/kube/api.go
@@ -2,6 +2,7 @@ package kube
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/sreok/kube-go/api/mysql"
 	"github.com/sreok/kube-go/api/types"
 	"github.com/sreok/kube-go/models"
 	"k8s.io/apimachinery/pkg/runtime/schema"
@@ -12,7 +13,7 @@ import (
 // @Summary      获取APIGroups信息
 // @Description  获取APIGroups信息
 // @Tags         Kubernetes
-// @Router       /api/pod [get]
+// @Router       /api/groups [get]
 func GetAPIGroups(context *gin.Context) {
 	// 获取所有分组和资源数据
 	_, APIResourceListSlice, err := models.DiscoveryClient().ServerGroupsAndResources()
@@ -33,89 +34,6 @@ func GetAPIGroups(context *gin.Context) {
 			ResourceName: singleAPIResourceList.APIResources,
 		})
 	}
-	context.JSON(http.StatusOK, apiInfo)
-}
-
-// PostPods
-// @Summary      获取APIGroups信息
-// @Description  获取APIGroups信息
-// @Tags         Kubernetes
-// @Router       /api/pod [post]
-func PostPods(context *gin.Context) {
-	// 获取所有分组和资源数据
-	_, APIResourceListSlice, err := models.DiscoveryClient().ServerGroupsAndResources()
-	if err != nil {
-		panic(err.Error())
-	}
-	var apiInfo []types.ApiGroupInfo
-	for _, singleAPIResourceList := range APIResourceListSlice {
-		// GroupVersion是个字符串，例如"apps/v1"
-		groupVersionStr := singleAPIResourceList.GroupVersion
-		// ParseGroupVersion方法将字符串转成数据结构
-		gv, err := schema.ParseGroupVersion(groupVersionStr)
-		if err != nil {
-			panic(err.Error())
-		}
-		apiInfo = append(apiInfo, types.ApiGroupInfo{
-			GroupVersion: gv,
-			ResourceName: singleAPIResourceList.APIResources,
-		})
-	}
-	context.JSON(http.StatusOK, apiInfo)
-}
-
-// DeletePods
-// @Summary      获取APIGroups信息
-// @Description  获取APIGroups信息
-// @Tags         Kubernetes
-// @Router       /api/pod [delete]
-func DeletePods(context *gin.Context) {
-	// 获取所有分组和资源数据
-	_, APIResourceListSlice, err := models.DiscoveryClient().ServerGroupsAndResources()
-	if err != nil {
-		panic(err.Error())
-	}
-	var apiInfo []types.ApiGroupInfo
-	for _, singleAPIResourceList := range APIResourceListSlice {
-		// GroupVersion是个字符串，例如"apps/v1"
-		groupVersionStr := singleAPIResourceList.GroupVersion
-		// ParseGroupVersion方法将字符串转成数据结构
-		gv, err := schema.ParseGroupVersion(groupVersionStr)
-		if err != nil {
-			panic(err.Error())
-		}
-		apiInfo = append(apiInfo, types.ApiGroupInfo{
-			GroupVersion: gv,
-			ResourceName: singleAPIResourceList.APIResources,
-		})
-	}
-	context.JSON(http.StatusOK, apiInfo)
-}
-
-// PutPods
-// @Summary      获取APIGroups信息
-// @Description  获取APIGroups信息
-// @Tags         Kubernetes
-// @Router       /api/pod [put]
-func PutPods(context *gin.Context) {
-	// 获取所有分组和资源数据
-	_, APIResourceListSlice, err := models.DiscoveryClient().ServerGroupsAndResources()
-	if err != nil {
-		panic(err.Error())
-	}
-	var apiInfo []types.ApiGroupInfo
-	for _, singleAPIResourceList := range APIResourceListSlice {
-		// GroupVersion是个字符串，例如"apps/v1"
-		groupVersionStr := singleAPIResourceList.GroupVersion
-		// ParseGroupVersion方法将字符串转成数据结构
-		gv, err := schema.ParseGroupVersion(groupVersionStr)
-		if err != nil {
-			panic(err.Error())
-		}
-		apiInfo = append(apiInfo, types.ApiGroupInfo{
-			GroupVersion: gv,
-			ResourceName: singleAPIResourceList.APIResources,
-		})
-	}
+	mysql.InsertApiGroups()
 	context.JSON(http.StatusOK, apiInfo)
 }
