# docs/swagger/swagger.json
@@ -47,6 +47,16 @@
                 "responses": {}
             }
         },
+        "/api/groups": {
+            "get": {
+                "description": "获取APIGroups信息",
+                "tags": [
+                    "Kubernetes"
+                ],
+                "summary": "获取APIGroups信息",
+                "responses": {}
+            }
+        },
         "/api/namespaces": {
             "get": {
                 "description": "获取命名空间",
